fix alignment issue

--- a/sass/single-form-setting.scss
+++ b/sass/single-form-setting.scss
@@ -179,7 +179,7 @@
 							position: relative;
 							.srfm-scroll-dropdown {
 								position: absolute;
-								top: 3px;
+								top: 0;
 								right: 0;
 								.has-icon {
 									min-height: 41px;
